mdapioutput/objects/Interviewer__c.object
<CustomObject>
    <label>Interviewer</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interviewer No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Interviewer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Interviewer Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Interviewers</relationshipLabel>
        <relationshipName>Interviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>